--- a/frontend/src/Components/FishingLocations/FishingLocationsList.module.css
+++ b/frontend/src/Components/FishingLocations/FishingLocationsList.module.css
@@ -6,11 +6,13 @@
   background: #eee;
   max-width: 1200px;
   margin: 15px auto;
-  padding: 16px;
+  padding: 32px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   list-style-type: none;
-  gap: 24px;
+  gap: 36px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 .gridContainer > div {
@@ -18,6 +20,11 @@
     rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
   padding: 16px;
   background: #dcdcdc;
+}
+
+.locationItem {
+  text-decoration: none;
+  color: #000;
 }
 
 .locationTitle {
