--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,3 +7,15 @@
   src: local("Shantell"),
     url(./Utilities/Fonts/Shantell/ShantellSans-.ttf) format("truetype");
 }
+@font-face {
+  font-family: "PlayfairDisplay";
+  src: local("PlayfairDisplay"),
+    url(./Utilities/Fonts/Playfair_Display/PlayfairDisplay-Italic-VariableFont_wght.ttf)
+      format("truetype");
+}
+
+@font-face {
+  font-family: "Pacifico";
+  src: local("Pacifico"),
+    url(./Utilities/Fonts/Pacifico/Pacifico-Regular.ttf) format("truetype");
+}
