--- a/frontend/src/Utilities/Buttons/Buttons.module.css
+++ b/frontend/src/Utilities/Buttons/Buttons.module.css
@@ -1,13 +1,20 @@
+.btnContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 16px;
+}
+
 .button {
   text-decoration: none;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   padding: 8px 16px;
   font-size: 16px;
   font-weight: bold;
   color: #fff;
   border-radius: 8px;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #000;
   border: solid whitesmoke;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
