--- a/frontend/src/Components/FishingLocations/PreciseLocation/PreciseLocation.module.css
+++ b/frontend/src/Components/FishingLocations/PreciseLocation/PreciseLocation.module.css
@@ -40,6 +40,11 @@
     rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
 
+.fishList {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .fishList > li {
   margin-top: 12px;
   font-family: Arial, Helvetica, sans-serif;
