--- a/frontend/src/Utilities/Buttons/Buttons.module.css
+++ b/frontend/src/Utilities/Buttons/Buttons.module.css
@@ -19,6 +19,9 @@
   border: solid whitesmoke;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   border: solid whitesmoke;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:focus,
