--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #d1dedd;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 code {
