--- a/frontend/src/Components/FishingLocations/FishingLocationsList.module.css
+++ b/frontend/src/Components/FishingLocations/FishingLocationsList.module.css
@@ -23,6 +23,12 @@
 .locationItem {
   text-decoration: none;
   color: #000;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.locationItem:hover,
+.locationItem:focus {
+  color: #007fff;
 }
 
 .locationTitle {
