--- a/frontend/src/Components/Regions/Regions.module.css
+++ b/frontend/src/Components/Regions/Regions.module.css
@@ -1,16 +1,28 @@
 .regionsList {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin-top: 32px;
+  gap: 16px;
+  margin: auto;
+  padding: 0 24px;
 }
 
 .regionsItem {
   list-style-type: none;
-  margin-bottom: 24px;
   font-weight: 800;
   font-size: 24px;
   font-style: italic;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0;
+}
+
+.container {
+  display: grid;
+  align-items: center;
+
+  padding: 24px;
+  background: #dcdcdc;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
+    rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 }
 
 .link {
@@ -21,4 +33,11 @@
 .link :hover,
 .link :focus {
   color: #007fff;
+}
+
+.image {
+  max-width: 100%;
+  /* width: 250px; */
+  height: 200px;
+  margin-bottom: 16px;
 }
