--- a/frontend/src/Components/Regions/Regions.module.css
+++ b/frontend/src/Components/Regions/Regions.module.css
@@ -13,6 +13,9 @@
   font-style: italic;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0;
+  cursor: pointer;
+  display: block;
+  /* display: inline-block; */
 }
 
 .container {
@@ -27,6 +30,7 @@
 
 .link {
   color: #000;
+  cursor: auto;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -37,7 +41,7 @@
 
 .image {
   max-width: 100%;
-  /* width: 250px; */
   height: 200px;
   margin-bottom: 16px;
+  cursor: zoom-in;
 }
