--- a/frontend/src/Components/Regions/Regions.module.css
+++ b/frontend/src/Components/Regions/Regions.module.css
@@ -21,6 +21,7 @@
 .container {
   display: grid;
   align-items: center;
+  justify-items: center;
   justify-content: center;
   padding: 24px;
   background: #dcdcdc;
