--- a/frontend/src/Components/FishingLocations/PreciseLocation/PreciseLocation.module.css
+++ b/frontend/src/Components/FishingLocations/PreciseLocation/PreciseLocation.module.css
@@ -52,7 +52,9 @@
 }
 
 .imagesList {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 24px;
   justify-content: center;
   list-style-type: none;
   grid-template-columns: repeat(6, 1fr);
@@ -60,6 +62,17 @@
   margin-bottom: 24px;
 }
 
-.imagesList > li:not(:last-child) {
-  margin-right: 16px;
+.image {
+  width: 160px;
+  height: 100px;
 }
+
+.imageItem:hover .image,
+.imageItem:focus .image {
+  transform: scale(1.35);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .imagesList > li:not(:last-child) {
+  margin-right: 16px;
+} */
