--- a/frontend/src/Components/Footer/Footer.module.css
+++ b/frontend/src/Components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 footer {
-  background: #000;
+  background: #555;
   color: #fff;
   padding: 16px;
   font-weight: 800;
@@ -28,4 +28,15 @@ a {
   text-decoration: none;
   color: #fff;
   font-size: 16px;
+}
+
+.socList {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.socList > li:not(:last-child) {
+  margin-right: 36px;
 }
