--- a/frontend/src/Components/Footer/Footer.module.css
+++ b/frontend/src/Components/Footer/Footer.module.css
@@ -17,6 +17,7 @@ footer {
   text-decoration: none;
   margin-bottom: 16px;
   display: flex;
+  justify-content: center;
 }
 
 .adressList > li:not(:last-child) {
@@ -35,6 +36,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding: 0;
 }
 
 .socList > li:not(:last-child) {
