--- a/frontend/src/Components/NewData/NewData.module.css
+++ b/frontend/src/Components/NewData/NewData.module.css
@@ -7,10 +7,19 @@
 
 .input {
   margin-bottom: 20px;
+  min-width: 240px;
+  padding: 8px 20px;
+  text-align: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 .label {
   margin-bottom: 20px;
+  font-weight: 700;
+  font-style: italic;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .button {
@@ -36,4 +45,12 @@
 .button:hover {
   background-color: #fff;
   color: #000;
+}
+
+.textarea {
+  min-width: 240px;
+  padding: 8px 16px;
+  margin-bottom: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
