--- a/frontend/src/Components/FishingLocations/FishingLocationsList.module.css
+++ b/frontend/src/Components/FishingLocations/FishingLocationsList.module.css
@@ -20,6 +20,15 @@
   background: #dcdcdc;
 }
 
+.item {
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item:hover,
+.item:focus {
+  transform: scale(1.2);
+}
+
 .locationItem {
   text-decoration: none;
   color: #000;
