--- a/frontend/src/Components/FishingLocations/FishingLocationsList.module.css
+++ b/frontend/src/Components/FishingLocations/FishingLocationsList.module.css
@@ -32,12 +32,14 @@
 .locationItem {
   text-decoration: none;
   color: #000;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .locationItem:hover,
 .locationItem:focus {
   color: #007fff;
+  transform: rotate(-5deg);
 }
 
 .locationTitle {
