--- a/frontend/src/Components/Regions/Regions.module.css
+++ b/frontend/src/Components/Regions/Regions.module.css
@@ -11,11 +11,16 @@
   font-weight: 800;
   font-size: 24px;
   font-style: italic;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0;
   cursor: pointer;
   display: block;
-  /* display: inline-block; */
+}
+
+.regionsItem:hover,
+.regionsItem:focus {
+  transform: rotate(-5deg);
 }
 
 .container {
